[tool.poetry]
name = "rb-framework"
version = "0.1.0"
description = ""
authors = ["Sai Dharshan <saidharshan01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
robotframework = "^4.1.3"
robotframework-seleniumlibrary = "^5.1.3"
webdrivermanager = "^0.10.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
neovim = "^0.3.1"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
ipython = "^8.1.1"
pep8 = "^1.7.1"
pip = "^22.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
